[gd_scene load_steps=2 format=3 uid="uid://b0i27gmisf1oh"]

[ext_resource type="Script" path="res://scenes/ui/settings/key_rebind/key_rebind.gd" id="1_hsyqb"]

[node name="KeyRebind" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_hsyqb")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Action" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(130, 40)
layout_mode = 2
size_flags_horizontal = 4
text = "action name"
vertical_alignment = 1

[node name="LeftButton" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "key1"

[node name="RightButton" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "key2"

[connection signal="pressed" from="HBoxContainer/LeftButton" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="HBoxContainer/RightButton" to="." method="_on_right_button_pressed"]
